# tarkov-guide

./: .eslintrc.js  .gitignore  README.md  cypress.config.js  manage.py  package.json  pyproject.toml  pytest.ini  setup.cfg  tailwind.config.js
.github/workflows/: ci.yml
cypress/features/: user_can_select_map.cy.js  user_can_select_quests.cy.js
cypress/support/: e2e.js  index.js
questmap/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  views.py  viewsets.py
questmap/migrations/: 0001_initial.py  0002_remove_quest_x_remove_quest_y_coordinates.py
questmap/templates/: base.html
static/src/: parcel-entry.js
static/src/js/: index.js
static/src/js/components/: App.js  App.jsx  Map.js  QuestSelector.js
static/src/js/components/item-selector/: Header.js  Item.js  ItemSelector.js  Items.js  SearchBar.js  SearchIcon.js
static/src/js/components/quest-selector/: Image.js  Item.js  QuestSelector.js
static/src/scss/: index.css  index.scss
tarkov_guide/: asgi.py  settings.py  urls.py  wsgi.py
tarkov_guide/tarkov_guide/: asgi.py  settings.py
tests/: test_questmap.py
